processed/gerrit/txt_full/61762.txt
Change:     61762
Subject:    LU-12187 lod: fix write intent for EC files with seek
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/61762
Change-Id:  I534862d65673a8956261db438bd52f00404adac5
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Patrick Farrell
Created:    2025-10-10 18:10:55.000000000
Updated:    2025-10-31 20:58:06.000000000
Patch Set:  1
Insertions: +190
Deletions:  -43
Comments:   17 (0 unresolved)

--- Commit Message ---
LU-12187 lod: fix write intent for EC files with seek

When writing to an EC file at an offset (e.g., with
dd seek=1), the write was failing with -EALREADY because
lod_declare_update_plain() was not recognizing that
marking parity components as stale is a layout change.

The issue occurred because:
1. EC files start in RDONLY state
2. On write, lod_declare_update_rdonly() transitions to
   WRITE_PENDING and calls lod_declare_update_plain()
3. lod_declare_update_plain() marks parity components as
   stale but doesn't set layout_changed=true
4. With no layout_changed, it returns -EALREADY

Fix by setting layout_changed=true when marking parity
components stale for EC files. This ensures the state
machine progresses correctly: RDONLY to WRITE_PENDING
with stale parity.

Also fixes:
- Duplicate test_2a in sanity-ec-flr.sh (renamed to
  test_2b)
- Test 5a to use $TRUNCATE instead of system truncate
  command
- Test 6a to match actual extent output format

Test-Parameters: trivial
Signed-off-by: Patrick Farrell <pfarrell@whamcloud.com>
Change-Id: I534862d65673a8956261db438bd52f00404adac5

--- Review History ---

--- Message (Patrick Farrell, 2025-10-10 18:10:55.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-10-10 18:13:40.000000000) ---
Patch Set 1:

(7 comments)

7 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2025-10-10 18:15:03.000000000) ---
Patch Set 1:

(10 comments)

rocky8.10: Compile failed

rocky9.5: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/55855/results.html

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-10-10 18:16:07.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

 make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/lod/lod_object.o] Error 1
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/lod] Error 2
make[2]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre] Error 2
make[1]: *** [Makefile:1944: /home/green/git/lustre-release] Error 2
make: *** [autoMakefile:1239: modules] Error 2
 In file included from ./include/asm-generic/bug.h:5,
                  from ./arch/x86/include/asm/bug.h:87,
                  from ./include/linux/bug.h:5,
                  from ./include/linux/random.h:6,
                  from /home/green/git/lustre-release/lustre/lod/lod_object.c:23:
 /home/green/git/lustre-release/lustre/lod/lod_object.c: In function ГўВҖВҳlod_declare_update_plainГўВҖВҷ:
 /home/green/git/lustre-release/lustre/lod/lod_object.c:7541:20: error: ГўВҖВҳstruct lod_objectГўВҖВҷ has no member named ГўВҖВҳldo_ec_countГўВҖВҷ
  7541 |                  lo->ldo_ec_count > 0));
       |                    ^~
 ./include/linux/compiler.h:78:45: note: in definition of macro ГўВҖВҳunlikelyГўВҖВҷ
    78 | # define unlikely(x)    __builtin_expect(!!(x), 0)
       |                                             ^
 /home/green/git/lustre-release/libcfs/include/libcfs/libcfs_private.h:74:23: note: in expansion of macro ГўВҖВҳLASSERTFГўВҖВҷ
    74 | #define LASSERT(cond) LASSERTF(cond, "\n")
       |                       ^~~~~~~~
 /home/green/git/lustre-release/lustre/lod/lod_object.c:7539:9: note: in expansion of macro ГўВҖВҳLASSERTГўВҖВҷ
  7539 |         LASSERT(lo->ldo_flr_state == LCM_FL_NONE ||
       |         ^~~~~~~
 /home/green/git/lustre-release/lustre/lod/lod_object.c:7550:27: error: ГўВҖВҳstruct lod_objectГўВҖВҷ has no member named ГўВҖВҳldo_ec_countГўВҖВҷ
  7550 |                 LASSERT(lo->ldo_ec_count > 0);
       |                           ^~
 ./include/linux/compiler.h:78:45: note: in definition of macro ГўВҖВҳunlikelyГўВҖВҷ
    78 | # define unlikely(x)    __builtin_expect(!!(x), 0)
       |                                             ^
 /home/green/git/lustre-release/libcfs/include/libcfs/libcfs_private.h:74:23: note: in expansion of macro ГўВҖВҳLASSERTFГўВҖВҷ
    74 | #define LASSERT(cond) LASSERTF(cond, "\n")
       |                       ^~~~~~~~
 /home/green/git/lustre-release/lustre/lod/lod_object.c:7550:17: note: in expansion of macro ГўВҖВҳLASSERTГўВҖВҷ
  7550 |                 LASSERT(lo->ldo_ec_count > 0);
       |                 ^~~~~~~
 /home/green/git/lustre-release/lustre/lod/lod_object.c:7609:38: error: implicit declaration of function ГўВҖВҳlod_comp_parityГўВҖВҷ; did you mean ГўВҖВҳlod_comp_initedГўВҖВҷ? [-Werror=implicit-function-declaration]
  7609 |         if (lo->ldo_comp_cnt > 1 && !lod_comp_parity(lod_comp) &&
       |                                      ^~~~~~~~~~~~~~~
       |                                      lod_comp_inited
 /home/green/git/lustre-release/lustre/lod/lod_object.c:7644:31: error: ГўВҖВҳstruct lod_objectГўВҖВҷ has no member named ГўВҖВҳldo_ec_countГўВҖВҷ
  7644 |                         if (lo->ldo_ec_count > 0)
       |                               ^~
 /home/green/git/lustre-release/lustre/lod/lod_object.c: In function ГўВҖВҳlod_declare_update_rdonlyГўВҖВҷ:
 /home/green/git/lustre-release/lustre/lod/lod_object.c:8340:15: error: ГўВҖВҳstruct lod_objectГўВҖВҷ has no member named ГўВҖВҳldo_ec_countГўВҖВҷ
  8340 |         if (lo->ldo_ec_count > 0 && lo->ldo_mirror_count <= 1) {
       |               ^~
 /home/green/git/lustre-release/lustre/lod/lod_object.c: In function ГўВҖВҳlod_declare_update_write_pendingГўВҖВҷ:
 /home/green/git/lustre-release/lustre/lod/lod_object.c:8482:15: error: ГўВҖВҳstruct lod_objectГўВҖВҷ has no member named ГўВҖВҳldo_ec_countГўВҖВҷ
  8482 |         if (lo->ldo_ec_count > 0 && lo->ldo_mirror_count <= 1 &&
       |               ^~
 /home/green/git/lustre-release/lustre/lod/lod_object.c: In function ГўВҖВҳlod_declare_update_sync_pendingГўВҖВҷ:
 /home/green/git/lustre-release/lustre/lod/lod_object.c:8671:15: error: ГўВҖВҳstruct lod_objectГўВҖВҷ has no member named ГўВҖВҳldo_ec_countГўВҖВҷ
  8671 |         if (lo->ldo_ec_count > 0 && lo->ldo_mirror_count <= 1) {
       |               ^~
 /home/green/git/lustre-release/lustre/lod/lod_object.c:8744:43: error: ГўВҖВҳstruct lod_objectГўВҖВҷ has no member named ГўВҖВҳldo_ec_countГўВҖВҷ
  8744 |         if (lo->ldo_mirror_count > 1 || lo->ldo_ec_count > 0)
       |                                           ^~

--- Message (jenkins, 2025-10-10 19:04:39.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/117328/ : FAILURE

--- Message (Patrick Farrell, 2025-10-31 20:58:06.000000000) ---
Abandoned

Not needed with EC-as-mirror
